tests/NormalTests/paczka2/big_fuzzy/74094201.err
Error in line 10: MVkUT S680 -5,0
Error in line 15: S6CsC3K S54 49,6
Error in line 24: Cfmnb}pkRhQ A294 90,2
Error in line 6: MVkUT S680 99,1
Error in line 30: lOQoCR5R S635 42,0
Error in line 39: 08y4 S680 8B,3
Error in line 37: S6CsC3K S635 23,0
Error in line 44: MVkUT S680 16,9
Error in line 45: 5xKOlIemOX S680 25,5
Error in line 48: 5xKOlIemOX S54 11,8
Error in line 22: 08y4 A294 90,9
Error in line 32: Cfmnb6pkRhQ A294 249,0
Error in line 53: 08y4 S680 349,7
Error in line 55: 08y4 A294 50,7
Error in line 54: Cfmnb6pkRhQ S54 8,6
Error in line 42: S6CsC3K S54 72,9
Error in line 58: Cfmnb6pkRhQ S635 73,9
Error in line 43: lOQoCR5R S680 60,3
Error in line 69: MVkUT S635 86,6
Error in line 68: lOQoCR5R S635 72,5
Error in line 67: 5xKOlIemOX S54 38,3
Error in line 65: S6CsC3K S635 61,0
Error in line 100: S6CsC3K S54 12,2
Error in line 88: lOQoCR5R S54 24,6
Error in line 109: MVkUT A294 76,4
Error in line 105: Cfmnb6pkRhQ S635 53,2
Error in line 110: MVkUT S54 5,1
Error in line 119: Cfmnb6pkRhQ S680 82,3
Error in line 120: Cfmnb6pkRhQ S635 79,6
Error in line 123: Cfmnb6pkRhQ A294 30,3
Error in line 130: S54 S680 49,5
Error in line 139: 5xKOlIemOX A29/ 17,/
Error in line 132: 5xKOlIemOX S680 21,6
Error in line 134: lOQoCR5R A294 33,0
Error in line 137: MVkUT S635 187,7
Error in line 142: lOQoCR5R S680 59,1
Error in line 153: 5xKOlIemOX S680 93,9
Error in line 156: 5xKOlIemOX A294 77,3
Error in line 158: 5xKOlIemOX S635 41,3
Error in line 168: lOQoCR5R S680 75,7
Error in line 176: 5xKOlIemOX A294 94,9
Error in line 170: lOQoCR5R A294 40,2
Error in line 180: lOQoCR5R S635 50,0
Error in line 182: S54 S54 5,8
Error in line 184: S6CsC3K S680 237,68
Error in line 185: 08y4 S680 -4,8
Error in line 191: 08y4 S680 5,9
Error in line 172: S6CsC3K S680 88,4
Error in line 211: MVkUT S635 31,0
Error in line 217: 08y4 S680 41,8
Error in line 219: MVkUT A294 138,9
Error in line 227: S54 S54 90,3
Error in line 240: S6CsC3K S680 20,7
Error in line 228: 5xKOlIemOX S680 14,6
Error in line 245: 5xKOlIemOX S54 32,8
